# Multiplayer-quiz-platform

./: .gitignore  LICENSE  package-lock.json
quizzly-backend/: CMakeLists.txt  Makefile  setup-mongocxx  setup-mongocxx.ps1
quizzly-backend/include/: createQuiz.h  editQuiz.h  getQuizzes.h  login.h  register.h
quizzly-backend/include/database/: MongoConnector.hpp
quizzly-backend/include/server/: HttpServer.hpp
quizzly-backend/src/: createQuiz.cpp  createQuiz.h  editQuiz.cpp  getQuizzes.cpp  getQuizzes.h  login.cpp  login.h  main  main.cpp  mongo_instance.cpp  mongo_instance.h  register.cpp  register.h  server.cpp
quizzly-backend/src/database/: MongoConnector.cpp
quizzly-backend/src/server/: HttpServer.cpp
quizzly-frontend/: .env  README.md  index.html  package-lock.json  package.json
quizzly-frontend/src/: App.css  App.jsx  index.css
quizzly-frontend/src/components/: Footer.css  Footer.jsx  Navbar.css  Navbar.jsx
quizzly-frontend/src/context/: AuthContext.jsx
quizzly-frontend/src/pages/: AuthPages.css  CreateQuiz.css  CreateQuiz.jsx  Dashboard.css  Dashboard.jsx  EditQuiz.css  EditQuiz.jsx  GameLobby.css  GameLobby.jsx  Home.css  Home.jsx  JoinGame.css  JoinGame.jsx  Login.jsx  NotFound.css  NotFound.jsx  PlayQuiz.css  PlayQuiz.jsx  QuizResults.css  QuizResults.jsx  Register.jsx
